<resources>
    <string name="appName">Card Flipper</string>
    <string name="tabText1">Home</string>
    <string name="tabText2">Leaderboard</string>
    <string name="tabText3">Play!</string>
    <string name="startGame">Start!</string>
    <string name="card">card</string>
    <string name="cardCount">Number of Cards</string>
    <string name="lifeCount">Number of Lives</string>
    <string name="gameSettings">Game Settings</string>
    <string name="score">Score</string>
    <string name="lives">Lives</string>
    <string name="timer">Timer</string>
    <string name="endGame">End Game</string>
    <string name="gameSettingsAnimate">Animate Cards</string>
    <string name="gameSettingsShowCards">Show the Cards before the Game</string>
    <string name="resetToDefault">Reset to Default Settings</string>
    <string name="gameOver">Game Over!</string>
    <string name="placeholder">Placeholder</string>
    <string name="finalScore">Final Score</string>
    <string name="backToMainMenu">Return to Main Menu</string>
    <string name="pageNumberStart">Back to Start</string>
    <string name="leaderboardTitle">Leaderboard</string>
    <string name="position">Position</string>
    <string name="name">Name</string>
    <string name="nameHint">Enter your Name Here</string>

    <string name="welcomeTextTitle1">Welcome to Card Flipper!</string>
    <string name="welcomeTextTitle2">Setting up a Game!</string>
    <string name="welcomeTextTitle3">How to Play!</string>

    <string name="welcomeTextBody1">Welcome to the game! Use the tabbed bar at the top to navigate between home, the leaderboard and the game. Use the arrow buttons to show more information on how to play the game</string>
    <string name="welcomeTextBody2">Using the tabbed bar at the top of the application, navigate to the play section, highlighted here in red</string>
    <string name="welcomeTextBody3">On this page you can configure different settings for a game, such as the Number of Cards, Number of Lives, and a timer. All of these contribute to getting a higher final score. but the game can be played however you want</string>
    <string name="welcomeTextBody4">You can also configure if the cards should be shown before hand and if the cards should animate when playing. This can be useful for games with a timer or lives as this can speed up how long the game will take!</string>
    <string name="welcomeTextBody5">Now you have everything configured, the game can be started. Alternatively, if the settings are not right, you can reset and enter them in again</string>
    <string name="welcomeTextBody6">Once the game is started, you will be present with some cards facing down. Clicking on the cards will turn them face over</string>
    <string name="welcomeTextBody7">Matching two cards of the same type will remove them from the board, and increase your score</string>
    <string name="welcomeTextBody8">Continue matching cards until the entire board is cleared!</string>
    <string name="welcomeTextBody9">You can end the game at any time with the end game button</string>

    <string-array name="gameSettingsCardCounts">
        <item>20</item>
        <item>16</item>
        <item>12</item>
        <item>8</item>
    </string-array>

    <string-array name="gameSettingsTimer">
        <item>20 Seconds</item>
        <item>40 Seconds</item>
        <item>1 Minute</item>
        <item>2 Minutes</item>
        <item>Infinite</item>
    </string-array>

    <string-array name="gameSettingsLives">
        <item>3</item>
        <item>2</item>
        <item>1</item>
        <item>Infinite</item>
    </string-array>

</resources>